# recipe-explorer-Tanish2503

./: .gitignore  Dockerfile  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  sample-recipes.json
app/: dependencies.py  exceptions.py  main.py  models.py  models_auth.py  models_v2.py
app/middleware/: rate_limit.py
app/routes/: api.py  api_v1.py  api_v2.py  auth.py  pages.py
app/services/: auth.py  cache.py  fake_user_storage.py  metrics.py  prometheus_metrics.py  sqlite_storage.py  sqlite_storage_v2.py  storage.py  themealdb.py  user_storage.py
app/templates/: import.html  index.html  recipe_detail.html  recipe_form.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FavoriteButton.tsx  Navbar.tsx  RecipeCard.tsx  RecipeForm.tsx  SearchBar.tsx  SkeletonCard.tsx  SourceBadge.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useDebounce.ts  useFavorites.ts  useRecipes.ts
frontend/src/pages/: AddRecipePage.tsx  EditRecipePage.tsx  FavoritesPage.tsx  HomePage.tsx  LoginPage.tsx  RecipeDetailPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts  authApi.ts
frontend/src/types/: auth.ts  recipe.ts
static/js/: form.js
tests/: conftest.py  test_api.py  test_api_v1.py  test_api_v2.py  test_auth_api.py  test_auth_service.py  test_cache.py  test_external_recipes.py  test_metrics.py  test_themealdb.py  test_validation.py
