[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-explorer"
version = "1.0.0"
description = "Recipe Explorer — search internal and external (TheMealDB) recipes via a FastAPI app with Redis caching"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "jinja2==3.1.3",
    "pydantic>=2.10,<3",
    "pydantic[email]>=2.10,<3",
    "redis>=5.0,<6",
    "httpx==0.26.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "anyio[asyncio]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "TESTING=1",
    "SECRET_KEY=test-secret-key-not-for-production",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
